Get character by name
